# mastodon-bot

./: .gitignore  AGENT.md  README.md  astrology_data.py  common_calc.py  drink-water.py  drink_water.py  moon-transit.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: pr.yml
astlogy-bot/: astrology_data.py  common_calc.py  moon-transit-document.md  moon_transit.py  planet-transit.py  planet_transit.py  today_astrodice.py
astrology-bot/: astrology_data.py  planet_transit.py  readme.md  today_astrodice.py
